# hyperion-vault

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  META.json  Makefile  README.md
.github/workflows/: ci.yml  pgxn.yml  security.yml
crates/hyperion-vault/: Cargo.toml
crates/hyperion-vault-api/: Cargo.toml
crates/hyperion-vault-api/src/: authz.rs  cache.rs  clock.rs  config.rs  db.rs  dto.rs  error.rs  guards.rs  kms.rs  lib.rs  lockout.rs  main.rs  manage.rs  pg_apply.rs  rewrap.rs  rewrap_worker.rs  rotation_worker.rs  routes.rs  service.rs  state.rs
crates/hyperion-vault-api/src/raft/: mod.rs  network.rs  node.rs  server.rs  store.rs  types.rs
crates/hyperion-vault-api/src/store/: apply.rs  backup.rs  codec.rs  engine.rs  mod.rs  model.rs  ports.rs
crates/hyperion-vault-api/tests/: backup.rs  guard_security.rs  raft_cluster.rs
crates/hyperion-vault-core/: Cargo.toml
crates/hyperion-vault-core/src/: auth.rs  crypto.rs  error.rs  ip_allowlist.rs  lib.rs  rbac.rs  rotation.rs  types.rs
crates/hyperion-vault-core/tests/: auth_security.rs  crypto_security.rs  ip_allowlist_security.rs  rbac_security.rs  rotation_policy.rs
crates/hyperion-vault/src/: lib.rs
docker/: .env.example  Dockerfile  Dockerfile.runner  README.md  docker-compose.e2e.yml  docker-compose.wireguard.yml  docker-compose.yml  postgresql.vault.conf
docker/wireguard/: Dockerfile  entrypoint.sh  wg0.conf.example
docs/: API.md  ARCHITECTURE.md  DECISIONS.md  INTEGRATION.md  SECURITY.md  THREAT_MODEL.md  WIREGUARD.md
extension/: Cargo.toml  hyperion_vault.control
extension/src/: config.rs  lib.rs  schema.rs
fuzz/: Cargo.toml  README.md  run-all.sh
fuzz/fuzz_targets/: auth_fingerprint.rs  backup_decode.rs  crypto_roundtrip.rs  dto_decode.rs  envelope_unwrap.rs  ip_allowlist_parse.rs  local_key_from_base64.rs  raft_rpc_decode.rs  rbac.rs  rotation.rs  store_decode.rs  types_aad.rs
fuzz/seeds/auth_fingerprint/: token
fuzz/seeds/backup_decode/: empty
fuzz/seeds/ip_allowlist_parse/: example
fuzz/seeds/store_decode/: delete-command
packaging/: build-apt-repo.sh  build-deb.sh  index.html  install.sh
scripts/: check-meta-version.sh  e2e.sh  test-security.sh  test.sh
scripts/e2e/: lib.sh  run-all.sh  test-auth.sh  test-crud.sh  test-replica.sh  test-rotation.sh
scripts/wireguard/: gen-keys.sh
