[workspace]
resolver = "2"
members = [
    "crates/hyperion-vault",
    "crates/hyperion-vault-core",
    "crates/hyperion-vault-api",
]

[workspace.package]
version = "0.7.4"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Tadas Talaikis <info@nordlet.com>"]
repository = "https://github.com/hyperiondb/hyperion-vault"
homepage="https://hyperiondb.eu/"
readme = "README.md"
keywords = ["secrets", "vault", "encryption", "raft", "redb"]
categories = ["database", "cryptography"]

[workspace.dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tokio = { version = "=1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }
thiserror = "=2.0.18"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "json"] }
zeroize = { version = "=1.9.0", features = ["derive"] }
chacha20poly1305 = "=0.10.1"
getrandom = "=0.4.2"
sha2 = "=0.11.0"
subtle = "=2.6.1"
base64 = "=0.22.1"
ipnet = "=2.12.0"
anyhow = "=1.0.102"
redb = "=4.1.0"
time = { version = "=0.3.49", features = ["formatting"] }
openraft = { version = "=0.9.24", features = ["serde", "storage-v2", "loosen-follower-log-revert"] }
reqwest = { version = "=0.12.23", default-features = false, features = ["json"] }
hyperion-vault-core = { path = "crates/hyperion-vault-core", version = "=0.7.4" }
hyperion-vault-api = { path = "crates/hyperion-vault-api", version = "=0.7.4" }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
