[package]
name = "hyperion-vault-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1"

hyperion-vault-core = { path = "../crates/hyperion-vault-core" }
hyperion-vault-api = { path = "../crates/hyperion-vault-api", optional = true }
# Pinned identically to the workspace so its TypeConfig types unify with the API crate's.
openraft = { version = "=0.9.24", features = ["serde", "storage-v2", "loosen-follower-log-revert"], optional = true }

[features]
# The API targets pull in the full server dependency tree (redb, openraft,
# aws-sdk-kms, ...). They are opt-in so the lightweight core targets build fast.
#   cargo +nightly fuzz run --features api store_decode
api = ["dep:hyperion-vault-api", "dep:openraft"]

# Detach from the parent workspace so `cargo build/test --workspace` and the
# stable-pinned CI never try to compile this nightly-only crate.
[workspace]

[profile.release]
debug = 1

[[bin]]
name = "ip_allowlist_parse"
path = "fuzz_targets/ip_allowlist_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "local_key_from_base64"
path = "fuzz_targets/local_key_from_base64.rs"
test = false
doc = false
bench = false

[[bin]]
name = "envelope_unwrap"
path = "fuzz_targets/envelope_unwrap.rs"
test = false
doc = false
bench = false

[[bin]]
name = "crypto_roundtrip"
path = "fuzz_targets/crypto_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rbac"
path = "fuzz_targets/rbac.rs"
test = false
doc = false
bench = false

[[bin]]
name = "auth_fingerprint"
path = "fuzz_targets/auth_fingerprint.rs"
test = false
doc = false
bench = false

[[bin]]
name = "types_aad"
path = "fuzz_targets/types_aad.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rotation"
path = "fuzz_targets/rotation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "store_decode"
path = "fuzz_targets/store_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "backup_decode"
path = "fuzz_targets/backup_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "raft_rpc_decode"
path = "fuzz_targets/raft_rpc_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dto_decode"
path = "fuzz_targets/dto_decode.rs"
test = false
doc = false
bench = false
