[package]
name = "hyperion-vault-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure-Rust security core for hyperion-vault: envelope encryption, IP allowlist, token auth, rotation policy"

[dependencies]
serde.workspace = true
thiserror.workspace = true
zeroize.workspace = true
chacha20poly1305.workspace = true
getrandom.workspace = true
sha2.workspace = true
subtle.workspace = true
base64.workspace = true
ipnet.workspace = true

[dev-dependencies]
serde_json.workspace = true
