[package]
name = "hyperion-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HyperionDB Vault: encrypted secrets store for PostgreSQL clusters. Umbrella crate re-exporting the hyperion-vault security core."

[dependencies]
hyperion-vault-core.workspace = true
